# masha

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: examples.md
masha/: __init__.py  cli.py  config_loader.py  config_validator.py  env_loader.py  logger_factory.py  logging.conf  template_renderer.py  version.py
masha/filters/: string_utils.py
masha/tests/: maths_utils.py
test/: cli-config.json  config-a.yaml  config-b.yaml  config-c.json  config1.yaml  config2.json  config3.yaml  env_config.yaml  input.txt.j2  model.py  test_config_loader.py  test_config_validator.py  test_env_loader.py  test_template_renderer.py
