[tool.poetry]
name = "masha"
version = "0.0.0"
description = "MASHup of Configuration Loading from several file types and run yAsha like Jinja2 template rendition with Validation"
authors = ["Mitesh Jat <mitesh.singh.jat@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "6.0.2"
toml = "0.10.2"
result = "^0.17.0"
pydantic = "^2.10.6"
Jinja2 = "^3.1.5"
returns = "^0.24.0"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^25.1.0"
pylint = "^3.3.4"
ruff = "^0.9.5"
build = "^1.2.2.post1"
twine = "^6.1.0"

[tool.poetry.scripts]
masha = "masha.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
